tests/snapshots/examples_fixtures/patterns__pattern_validation_happy_path.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/patterns/pattern_validation_happy_path.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/pattern_validation_happy_path.flx:9:1
  |
9 | print(result);
  | ^^^^^^^^^^^^^^
  | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/patterns/pattern_validation_happy_path.flx:9:1
  |
9 | print(result);
  | ^^^^^^^^^^^^^^
  | -------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/pattern_validation_happy_path.flx:17:1
   |
17 | print(result2);
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/patterns/pattern_validation_happy_path.flx:24:1
   |
24 | print(guarded);
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 4 errors.
== stdout ==
<not executed>
